# CodeGraph-Lite

./: .gitignore  LICENSE  README.md  README.zh-TW.md  __init__.py  cli.py  package.json  pyproject.toml  setup.py
analysis/: __init__.py  context.py  impact.py
graph/: __init__.py  builder.py  database.py  queries.py
parser/: __init__.py  base.py  js_parser.py  python_parser.py
search/: __init__.py  engine.py  indexer.py
src/: cli.ts  index.ts
src/core/: parser.ts  visualizer.ts
src/types/: index.ts
tests/: __init__.py
tui/: __init__.py  dashboard.py
utils/: __init__.py  helpers.py
