[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegraph-lite"
version = "1.0.0"
description = "🔮 CodeGraph-Lite - Lightweight Terminal Code Knowledge Graph Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "CodeGraph-Lite Team"}
]
keywords = [
    "code-analysis",
    "knowledge-graph",
    "code-intelligence",
    "ast",
    "static-analysis",
    "developer-tools",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
tui = ["rich>=13.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
codegraph = "codegraph_lite.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/CodeGraph-Lite"
Documentation = "https://github.com/gitstq/CodeGraph-Lite#readme"
Repository = "https://github.com/gitstq/CodeGraph-Lite"
Issues = "https://github.com/gitstq/CodeGraph-Lite/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["codegraph_lite*"]

[tool.setuptools.package-data]
codegraph_lite = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
